--- a/views/employee.ejs
+++ b/views/employee.ejs
@@ -1,4 +1,5 @@
     <body>
+        <%- include('./header/navigation.ejs') %>
       <main>
                 <% if (emp.length > 0) { %>
                     <div class="grid">
