--- a/views/delete-employee.ejs
+++ b/views/delete-employee.ejs
@@ -5,5 +5,25 @@
         <h3><%= employee.lastName %></h3>
         <h3><%= employee.emailId %></h3>
         <h3><%= employee.phoneNumber %></h3>
-        <button class="btn" type="submit">Delete</button>
-    </main>
+        <input type="hidden" value="<%= employee.id %>" name="empId">
+        <button class="btn" type="button" onclick="deleteEmployee()">Delete</button>
+      </main>
+      <script>
+        function deleteEmployee() {
+          const empId = document.querySelector('input[name="empId"]').value;
+          fetch(`/delete-employee/${empId}`, {
+            method: 'post'
+          })
+         .then(response => {
+            if (response.ok) {
+              window.location.href = '/';
+            } else {
+              throw new Error('Failed to delete employee');
+            }
+          })
+         .catch(error => {
+            console.error(error);
+          });
+        }
+      </script>
+</body>
