--- a/views/header/navigation.ejs
+++ b/views/header/navigation.ejs
@@ -8,6 +8,9 @@
             <li class="main-header__item">
                 <a class="<%= path === '/employee' ? 'active' : '' %>" href="/employee">Employees</a>
             </li>
+            <li class="main-header__item">
+                <a class="<%= path === '/Login' ? 'active' : '' %>" href="/views/Login.ejs">Login</a>
+            </li>
         </ul>
     </nav>
 </header>
